--- a/resources/css/front/print_ticket.css
+++ b/resources/css/front/print_ticket.css
@@ -1,3 +1,14 @@
+.notice-info {
+    background: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeeba;
+    padding: 10px 15px;
+    border-radius: 8px;
+    margin: 15px auto;
+    text-align: center;
+    width: fit-content;
+}
+
 .section-title {
     font-size: 18px;
     font-weight: bold;
